cluster-components/kuberos/test-2/kuberos.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuberos
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: login.apps.test-2.k8s.cloud-platform.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuberos
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: kuberos
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: kuberos
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuberos
spec:
  template:
    metadata:
      labels:
        app: kuberos
    spec:
      containers:
      - name: kuberos
        image: negz/kuberos:14f4ca7
        command:
        - "/kuberos"
        - "$(OIDC_ISSUER_URL)"
        - "$(OIDC_CLIENT_ID)"
        - "/oidc/secret"
        - "/templates/kubecfg"

        ports:
        - containerPort: 10003
          name: http

        volumeMounts:
        - name: oidc
          mountPath: /oidc
        - name: templates
          mountPath: /templates

      volumes:
      - name: oidc
        secret:
          secretName: kuberos-oidc

      - name: templates
        configMap:
          name: templates
